1:03 AM, im done

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -8,7 +8,7 @@
 </head>
 
 <body>
-  <section class="mainSection">
+   <section class="mainSection">
     <div class="leftSection">
       <img src="./images/phones.png" alt="Example Phones">
     </div>
@@ -17,42 +17,45 @@
         <div class="logo">
           <img src="./images/brand.png" alt="Instagram Logo">
         </div>
-        <div class="logIn">
+        <button class="logIn">
           <img src="./images/home.png" alt="Log In Button">
-          <span>Log In</span>
-        </div>
+          Log In
+        </button>
       </section>
-      <section class="middleRight">
-        <h2>Capture and Share the World's Moments</h2>
-        <p id="one">Instagram is a <strong>fast</strong> , <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
-        <p id="two">
-          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
-          that
-          easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-        </p>
-        <p id="three">Oh yeah, did we mention it's free?</p>
-      </section>
-      <section class="bottomRight">
-        <div class="android">
-          <img src="./images/badge-android.png" alt="GooglePlay">
-        </div>
-        <div class="ios">
-          <img src="./images/badge-iphone.png" alt="AppleStore">
-        </div>
-      </section>
+    
+    <section class="middleRight">
+      <h2>Capture and Share the World's Moments</h2>
+      <p id="one">Instagram is a <strong>fast</strong> , <strong>beautiful</strong> and <strong>fun</strong> way to
+        share your life with friends and family.</p>
+      <p id="two">
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
+        that
+        easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      </p>
+      <p id="three">Oh yeah, did we mention it's free?</p>
+    </section>
+    <section class="bottomRight">
+      <div class="ios">
+        <img src="./images/badge-iphone.png" alt="AppleStore">
+      </div>
+      <div class="android">
+        <img src="./images/badge-android.png" alt="GooglePlay">
+      </div>
+      
     </section>
   </section>
-  <div class="bottomPage">
-    <nav id="menu">
-      <a href="">ABOUT US</a> |
-      <a href="">SUPPORT</a> |
-      <a href="">BLOG</a> |
-      <a href="">PRESS</a>
-      <a href="">API</a> |
-      <a href="">JOBS</a> |
-      <a href="">PRIVACY</a> |
-      <a href="">TERMS</a>
-    </nav>
+  </section>
+   <div class="bottomPage">
+      <ul>
+          <li><a href="default.asp">ABOUT US</a></li>
+          <li><a href="news.asp">SUPPORT</a></li>
+          <li><a href="contact.asp">BLOG</a></li>
+          <li><a href="about.asp">PRESS</a></li>
+          <li><a href="about.asp">API</a></li>
+          <li><a href="about.asp">JOBS</a></li>
+          <li><a href="about.asp">PRIVACY</a></li>
+          <li><a href="about.asp">TERMS</a></li>
+        </ul>
     <div class="copyright">
       &copy; 2014 Instagram
     </div>
