--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,41 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  <section>
-  <img class= "image-phone" src="images/phones.png">
-  </section>
+  <div class= "image-phone">
+  <img  src="images/phones.png">
+  </div>
 
-  <section>
-<div>
+  
+<div class="logo-istagram-image">
   <img class="logo-istagram" src="images/brand.png">
   <button><img src="images/home.png" alt="Home-Log-in">Log In</button> 
 </div>
+<div class="text">
+    <h1>Capture and Share the World's Moments</h1>
+    <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+    <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+    <p>Oh yeah, did we mention it's free?</p>
+     <div>
+      <button class="image-iphone"><img  src="images/badge-iphone.png" alt="image-iphone"></button>
+     </div>
+     <div>
+     <button class="image-android"><img  src="images/badge-android.png" alt="image-andoid"></button>
+     </div>
+ </div>
+<footer>
+  ABOUT US
 
+  SUPPORT
 
-  
-  Capture and Share the World's Moments
+  BLOG
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+  PRESS
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
   API
-  Jobs
-  Privacy
-  Terms
 
-  &copy; 2014 Instagram
+  JOBS
+
+  PRIVACY
+
+  TERMS
+
+<span>&copy; 2014 Instagram</span>
+</footer>
+</div>
 </section>
 </body>
 </html>
