--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,62 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css" />
 </head>
+
 <body>
-  Instagram
+  <section>
+    <div class="phones">
+      <img src="./images/phones.png" alt="Phones" />
+    </div>
+    <div>
+      <div class=header-false>
+        <a href="index.html"><img src="./images/brand.png" alt="Instagram" title="Homepage" /></a>
 
-  Capture and Share the World's Moments
+        <a class="login" href="https://www.instagram.com/accounts/login/?source=auth_switcher"><img
+            src="./images/home.png" alt="home" />Log in</a>
+      </div>
+      <div class="text">
+        <h2>Capture and Share the World's Moments</h2>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>
+          Instagram is a <span>fast</span>, <span>beautiful</span> and <span>fun</span> way to share your life with
+          friends and family.
+        </p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <p>
+          Take a picture or video, choose a filter to transform its look and
+          feel, then post to Instagram &mdash; it's that easy. You can even
+          share to Facebook, Twitter, Tumblr and more. It's a new way to see
+          the world.
+        </p>
 
-  Oh yeah, did we mention it's free?
+        <p>
+          yeah, did we mention it's free?
+        </p>
+        <div>
+          <a href="https://apps.apple.com/app/instagram/id389801252?vt=lo"><img src="./images/badge-iphone.png" /></a>
+          <a href="https://play.google.com/store/apps/details?id=com.instagram.android"><img
+              src="./images/badge-android.png" /></a>
+        </div>
+      </div>
+    </div>
+  </section>
 
-  Download on the App Store
-  Get it on Google Play
+  <footer>
+    <a href="#">About Us</a>
+    <a href="#">Support</a>
+    <a href="#">Blog</a>
+    <a href="#">Press</a>
+    <a href="#">API</a>
+    <a href="#">Jobs</a>
+    <a href="#">Privacy</a>
+    <a href="#">Terms</a>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+    &copy; 2014 Instagram
+  </footer>
 </body>
+
 </html>
