--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,78 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="utf-8">
+  <link rel="stylesheet" type="text/css" href="css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <main class="row background-img">
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <!-- Div 1, the first column -->
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <div>
 
-  Oh yeah, did we mention it's free?
+    <figure>
+      <img src="images/phones.png" alt="Phones">
+    </figure>
 
-  Download on the App Store
-  Get it on Google Play
+  </div>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+      <!-- Div 2 the second column -->
 
-  &copy; 2014 Instagram
+  <div class="second-column">
+
+        <div class="row align-center background-color">
+          <figure>
+            <img src="images/brand.png" alt="Instagram Logo">
+          </figure>
+
+          <div class="row click">
+            <figure>
+              <img src="images/home.png" alt="Home">
+            </figure>
+            <p class="login">Login</p>
+          </div>
+        </div>
+
+      <article class="white-box">
+
+        <h2>Capture and Share the World's Moments</h2>
+
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+
+        <p>Oh yeah, did we mention it's free?</p>
+
+        <div class="rowb img-margin">
+            <figure>
+              <img src="images/badge-iphone.png" alt="App Store" class="img-size">
+            </figure>
+            <figure>
+              <img src="images/badge-android.png" alt="Google Pay" class="img-size">
+            </figure>
+        </div>
+
+      </article>
+
+    </div>
+
+  </main>
+
+<footer>
+<ul>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li class="last-li">&copy; 2014 Instagram</li>
+</ul>
+
+  </footer>
 </body>
 </html>
