--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -5,27 +5,32 @@
   <title>Instagram</title>
 </head>
 <body>
-<body class="flex">
-    <section>
-    <img src="images/phones.png" alt="Phones img">
-  </section>
-  <section >
+<body>
+  <section  class="flex">
     <div>
+    <img src="images/phones.png" alt="Phones img">
+    </div>
+    <section  class="flex2">
+    <div class="centerImg">
       <img src="images/brand.png" alt="logo Instagram">
       <button><img src="images/home.png" alt="home log in">Log In </button>
     </div>
-    <div>
+    <div class="centerText">
       <h4> Capture and Share the World's Moments</h4>
       <p>  Instagram is a fast, beautiful and fun way to share your life with friends and family. </p>
       <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
       <p>Oh yeah, did we mention it's free?</p>
+    </div>
+    <div>
       <button><img src="images/badge-iphone.png" alt="logo i-phone"></button>
       <button><img src="images/badge-android.png" alt="logo android"></button>
     </div>
+    </div>
+    </section>
   </section>
+  <section>
   <footer>
-    <section>
-    <nav class="flex">
+    <nav class="footPosition">
       <a href="#">About Us</a>
       <a href="#">Support</a>
       <a href="#">Blog</a>
@@ -38,12 +43,11 @@
     </nav>
   </footer>
 </section>
-
 </body>
 </html>
 
 
-  <!--Instagram
+
 
 
 
