--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
+  <head>
   <title>Instagram</title>
-</head>
+  <link rel="stylesheet" href="css/main.css">
+  </head>
 <body>
-  Instagram
+  <header class="container">
+  <section class="phones">
+    <img src="images/phones.png" alt="phones">
+  </section>
+  <section>
+    <div class="brand">
+      <img src="images/brand.png" alt="brand">
+      <img class="up" src="images/home.png" alt="home">
+      <a href="#">Log in</a>
+    </div>
+    <div class="text">
+     <!-- <img src="images/frame.png" alt="frame">-->
+       <h2>Capture and Share the World's Moments</h2>
 
-  Capture and Share the World's Moments
+      <p> Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p> 
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+      <p> Oh yeah, did we mention it's free?</p>
+    </div>
+    <section class="buttons">
+      <img src="images/badge-android.png" alt="android">
+      <img src="images/badge-iphone.png" alt="iphone">
+    </section>
+ 
+</section>
+</header>
+ <footer>
+   <ul class="list">
+     <li>About Us</li>
+     <li>Support</li>
+     <li>Blog</li>
+     <li>Press</li>
+     <li>API</li>
+     <li>Jobs</li>
+     <li>Privacy</li>
+     <li>Terms</li>
+   </ul>
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+   <p>
   &copy; 2014 Instagram
+  </p>
+</footer>
 </body>
 </html>
