--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,57 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" type="text/css" href="css/main.css" />
 </head>
+
 <body>
-  Instagram
+  <main class="flex-box">
+    <section class="lateral-image">
+      <img src="images/phones.png" alt="iphone image" />
+    </section>
+    <section>
+      <header class="flex-inline">
+        <img src="images/brand.png" alt="instagram logo">
+        
+        <div class="button flex-inline space-around">
+            <img src="images/home.png">
+          <a class="button-style">Log in</a>
+        </div>
+      </header>
+      <article class="right-section">
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <h2>Capture and Share the World's Moments</h2>
+        <p>Instagram is a <b>fast</b>,
+          <b>beautiful</b> and <b>fun</b> way to share your life with friends
+          and family.</p>
+        <p>Take a picture or video, choose a filter to transform its
+          look and feel, then post to Instagram &mdash; it's that easy. You can
+          even share to Facebook, Twitter, Tumblr and more. It's a new way to
+          see the world.</p> <p>Oh yeah, did we mention it's free? </p>
+        <section class='button-down'>
+          <img src="images/badge-android.png" alt="android application" />
+          <img src="images/badge-iphone.png" alt=" iphone application" />
+        </section>
+      </article>
+    </section>
+  </main>
+  
+    <footer>
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="copy">&copy; 2014 Instagram</li>
+      </ul>
+    
+  </section>
 </body>
+
 </html>
