--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
+ 
 <head>
+  <link rel="stylesheet" href="./main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="columns">
+    <section class="space">
+      <img src="images/phones.png" alt="Phone images">
+    </section>
+    
+    <section class="space">
+      <div class="logo">
+      <img class="insta" src="images/brand.png" alt="Brand image"></img>
+      <button class="button">
+        <img src="images/home.png" alt="Home image"> Log in</img>
+      </button>
+    </div>
+    <div class="block">
+      <h1>Capture and Share the World's Moments</h1>
+      <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy.
+      You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+      <p>Oh yeah, did we mention it's free?</p>
+      <div class="botonera">
+        <img src="images/badge-iphone.png" alt="Get it on Google Play">
+        <img src="images/badge-android.png" alt="Download on the App Store">
+      </div>
+    </div>
+    </section>
+  </div>
+  <section>
+    <ul>
+      <li><a class="link" href="#" target='_blank'>About Us</a></li>
+      <li><a class="link" href="#" target='_blank'>Support</a></li>
+      <li><a class="link" href="#" target='_blank'>Blog</a></li>
+      <li><a class="link" href="#" target='_blank'>Press</a></li>
+      <li><a class="link" href="#" target='_blank'>API</a></li>
+      <li><a class="link" href="#" target='_blank'>Jobs</a></li>
+      <li><a class="link" href="#" target='_blank'>Privacy</a></li>
+      <li><a class="link" href="#" target='_blank'>Terms</a></li>
+      <li class="last">&copy; 2014 Instagram</a></li>     
+    </ul>
+  </section>
 </body>
 </html>
