--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="main.css">
 </head>
 <body>
-  Instagram
+<div class="box-1">
+    <div>
+      <img src="images/phones.png">
+    </div>
+  <div class="box-content">
+      <nav class="nav-barfit">
+        <img class="logo-ig" src="images/brand.png">
+        <span class="login-button"><img src="images/home.png"> <strong>Log in</strong></span>
+      </nav>
+      <section>
+        <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <p>Oh yeah, did we mention it's free?</p>
+    <div class="box-1 button-box1">
+      <img src="images/badge-iphone.png">
+      <img src="images/badge-android.png">
+    </div>
+      </section>
+  </div>
+</div>
+    <footer>
+      <ul>
+        <li>
+          <li><a href="#">About Us</a></li>
+          <li><a href="#">Support</a></li>
+          <li><a href="#">Blog</a></li>
+          <li><a href="#">Press</a></li>
+          <li><a href="#">API</a></li>
+          <li><a href="#">Jobs</a></li>
+          <li><a href="#">Privacy</a></li>
+          <li><a href="#">Terms</a></li>
+          <li><a href="#">&copy; 2014 Instagram</a></li>
+        </li>
+      </ul>
+    </footer>
 </body>
 </html>
