--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,24 +7,28 @@
 </head>
 
 <body class="body-style">
+  <div class="branding-ig">
+    <img src="images/brand.png" alt="branding-ig">
+  </div>
   <main class="general-content">
-    <div>
-      <img src="images/brand.png" alt="branding-ig">
-    </div>
-    <div>
+
+    <div class="mockup">
       <img src="images/phones.png" alt="iphone-mockup">
     </div>
     <div class="text-content">
       <h1>Capture and Share the World's Moments</h1>
-      <p>Instagram is a <span>fast</span>, <span>beutifull</span> and <span>fun</span> way to share your life with friends and family.</p>
+      <p>Instagram is a <span>fast</span>, <span>beutifull</span> and <span>fun</span> way to share your life with
+        friends and family.</p>
       <p> Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's
         that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
       <p>Oh yeah, did we mention it's free?</p>
     </div>
     <button class="log-btn">Log in</button>
   </main>
-  <img src="images/badge-iphone.png" alt="ios-store">
-  <img src="images/badge-android.png" alt="play-store">
+  <div class="download-app">
+    <img src="images/badge-iphone.png" alt="ios-store">
+    <img src="images/badge-android.png" alt="play-store">
+  </div>
 
   <footer>
     <ul class="inline-list">
