[MAD DE] Alfonso Villanueva

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -14,7 +14,7 @@
     <section class="logo">
       <a  href="#"><img src="images/brand.png" alt="logo de instagram" /></a>
   <link rel="stylesheet" href="">
-  <button class="logo button-edit"><img src="images/home.png" >Log in</button>
+  <button class="logo button-edit radio"><img src="images/home.png" >Log in</button>
 </section>
 <section class = "background text-section">
   <h1>Capture and Share the World's Moments</h1>
