last minute updates

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -19,7 +19,7 @@
         <button><img src="images/home.png" alt="house"> Log in</button>
       </div>
 
-      <div>
+      <div class = info>
         <h1> Capture and Share the World's Moments </h1>
         <h2>Instagram is a fast, beautiful and fun way to share your life with friends and family.</h2>
         <P>
@@ -27,9 +27,9 @@
           that easy.
           You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world. </P>
         <h3> Oh yeah, did we mention it's free?</h3>
-        <img src="images/badge-iphone.png" alt="app store">
-        <img src="images/badge-android.png" alt="google play">
       </div>
+      <img src="images/badge-iphone.png" alt="app store">
+      <img src="images/badge-android.png" alt="google play">
     </div>
   </div>
 
