--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,62 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="./css/main.css">
 </head>
+
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+    <div class="flex-container justify-space-between center-items">
+  <section>
+    <figure class= "phones">
+  <img src="images/phones.png" alt="pair of phones"></figure>
+</section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<section class= "right-part">
+  <div class= "photos-top">
+  <figure class="logo">
+  <img src="images/brand.png" alt="Logotipo Instagram"></figure>
+  <button class="log-in">
+    <img src="images/home.png"  alt="home">Log In</button>
+</div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+<section class= "background-p">
+  <h1>Capture and Share the World's Moments</h1>
+ 
+  <p>Instagram is a <strong> fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Download on the App Store
-  Get it on Google Play
+  Oh yeah, did we mention it's free?</p>
+</section>
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+ <div class="photos-bottoms">
+  <figure>
+  <img src= "images/badge-iphone.png" alt="Download on the App Store"></figure>
+  <figure class="badge-android">
+  <img src="images/badge-android.png" alt= "Get it on Google Play"></figure>
+ </div>
 
-  &copy; 2014 Instagram
+</section>
+
+</div>
 </body>
+
+<footer>
+  
+  <ul>
+    <li><a href="#">About Us</a></li>
+    <li><a href="#">Support</a></li>
+    <li><a href="#">Blog</a></li>
+    <li><a href="#">Press</a></li>
+    <li><a href="#">API</a></li>
+    <li><a href="#">Jobs</a></li>
+    <li><a href="#">Privacy</a></li>
+    <li><a href="#">Terms</a></li>
+    <li class="Mcopy">&copy; 2014 Instagram</li>
+  </ul>
+   </div>
+</footer>
+
 </html>
