--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,53 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  
+
+  <meta charset="UTF-8">
+  <link rel="stylesheet" type="text/css" href="css/main.css" >
+  <meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=yes">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <main>
+    <div class="two-blocks">
+    <section class="photos">
+      <img src="images/phones.png" alt="Phones">
+    </section>
+  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+    <div class="blockTwo">
+      <section class="">
+        <img src="images/brand.png" alt="brand">
+        <button  class="home" type="button"><img src="images/home.png" alt="home">log in</button>
+      </section>
+      <section class="container"> 
+        <h2>Capture and Share the World's Moments </h2>
+        <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+        <p>Oh yeah, did we mention it's free?</p>
+        <img src="images/badge-iphone.png" alt="Download on the App Store">
+        <img src="images/badge-android.png" alt="Get it on Google Play">
+        </section>
+      </div>
+    </div>
+      <footer >
+            
+                <ul > 
+                  <li>About Us</li>
+                  <li>Support</li>
+                  <li>Blog</li>
+                  <li>Press</li>
+                  <li>API</li>
+                  <li>Jobs</li>
+                  <li>Privacy</li>
+                  <li>Terms</li>
+                  <li>&copy; 2014 Instagram</li>
+                </ul>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+            
+      </footer>
+    </div>
+  </main>
 </body>
 </html>
