--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,57 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <section class="general">
+    <section class="phones">
+    <img src="./images/phones.png" alt="Phones">
+    </section>
 
-  Capture and Share the World's Moments
+    <section>
+      <section class="instagram">
+        <section>
+          <img src="./images/brand.png" alt="Instagram logo">
+        </section>
+        <section>
+          <button class="log-in"><img src="./images/home.png" alt="Log in">Log in</button>
+        </section>
+      </section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+      <section class="capture">
+        <section>
+          <h2>Capture and Share the World's Moments</h2>
+          <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+          <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+        </section>
+        <section class="app-store">
+          <section>
+            <img class="apple" src="./images/badge-iphone.png" alt="Download on the App Store">
+          </section>
+          <section>
+            <img class="android" src="./images/badge-android.png" alt="Get it on Google Play">
+        </section>
+      </section>
+    </section>
+    
+  </section>
+</section>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <footer>
+    <ul>
+      <li><a href="#">About Us</a></li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a></li>
+      <li><a href="#">Jobs</a></li>
+      <li><a href="#">Privacy</a></li>
+      <li><a href="#">Terms</a></li>
+      <li>&copy; 2014 Instagram</li>
+    </ul>
+  </footer>
+ 
 </body>
 </html>
