--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,63 @@
 <!DOCTYPE html>
 <html lang="en">
+<link rel = "stylesheet" href = "css/main.css">
 <head>
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+<div class = 'body'>
+<div class = "bck">
+  <div class = "main-content">
+    <div class = "square-thingy-things">
+      <div class = "left-side">
+          <img src = './images/phones.png'>
+      </div>
+      <div class = "right-side">
+        <div class = "title">
+          <div class = logo>
+            <img src = './images/brand.png' width = 300px height = auto>
+          </div>
+          <div class = "login">
+            <button><img src = './images/home.png'><p><strong>Log In</strong></p></button>
+          </div>
+        </div>
+        <div class = "inside-container">
+          <div class = 'text'>
+            <h3>
+              Capture and Share <br>the World's Moments
+            </h3>
+            <p>
+              Instagram is a <strong>fast</strong>, <strong>beautiful</strong>  and <strong> fun</strong>  way to share your life with friends and family.
+              <br>
+              <br>
+              Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+              <br>
+              <br>
+              Oh yeah, did we mention it's free?
+            </p>
+          </div>
+          <div class = 'download-images'>
+            <img src = "images/badge-iphone.png">
+            <img src = "images/badge-android.png">
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+</div>
+</div>
 </body>
+<footer>
+  <div class = 'footer-menu'>
+      <a href = '#'><strong>ABOUT US</a></strong>
+      <a href = '#'><strong>SUPPORT</a></strong>
+      <a href = '#'><strong>BLOG</a></strong>
+      <a href = '#'><strong>PRESS</a></strong>
+      <a href = '#'><strong>API</a></strong>
+      <a href = '#'><strong>JOBS</a></strong>
+      <a href = '#'><strong>PRIVACY</a></strong>
+      <a href = '#'><strong>TERMS</a></strong>
+      <a id="mark"><strong>© 2014 INSTAGRAM</strong></a>
+  </div>
+</footer>
 </html>
