--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,68 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
-<body>
-  Instagram
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<body><div class="general">
+    <img class="iphoneImages" src="images/phones.png" alt="" />
+    <div class="divDos">
+      <div>
+        <img src="images/brand.png" alt="" class="divDos-img" /><img />
+      </div>
+      <div>
+        <button>
+          <img src="images/home.png" alt="" /><span>Log in</span>
+        </button>
+      </div>
+    </div>
+  </div>
+  <div class="divTres">
+    <div class="texto">
+      <h1>
+        Capture and Share <br />
+        the World's Moments
+      </h1>
+      <p>
+        Instagram is a <strong>fast, beautiful</strong> and
+        <strong>fun</strong> way to share your life with friends and family.
+      </p>
+      <br />
+      <p>
+        Take a picture or video, choose a filter to transform its look and
+        feel, then post to Instagram &mdash; it's that easy. You can even
+        share to Facebook, Twitter, Tumblr and more. It's a new way to see the
+        world.
+      </p>
+      <br />
+      <p>Oh yeah, did we mention it's free?</p>
+      <br />
+      <div>
+        <img
+          src="./images/badge-iphone.png"
+          alt="Download on the App Store"
+        />
+        <img src="./images/badge-android.png" alt="Get it on Google Play" />
+      </div>
+    </div>
+  </div>
+  <div class="footerInstagram1">
+    <footer class="footerInstagram">
+      <ul>
+        <li>About Us</li>
+        <li>Support</li>
+        <li>Blog</li>
+        <li>Press</li>
+        <li>API</li>
+        <li>Jobs</li>
+        <li>Privacy</li>
+        <li>Terms</li>
+        <li class="copy">&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </div>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
