--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,55 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="./css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <div class="fondo-azul">
+    </div>
+      <div class="container2">
+          <img src="./images/phones.png" alt="telephones" class="img-cel">
+          <div class="tarjeta-padre">
+              <div class="login">
+                <img src="./images/brand.png" alt="">
+                <div id="log">
+                    <img src="./images/home.png" alt="" class="img-home">
+                    Log In
+                </div>
+              </div>
+              <div class="tarjeta">
+                  <div class="texto">
+                    <h2 class="titulo">Capture and Share the World's Moments</h2>
+                    <p class="parrafo">
+                        Instagram is a fast, beautiful and fun way to share your life with friends and family.
+                    </p>
+                    <p class="parrafo">
+                      Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+                    </p>
+                    <p class="parrafo">
+                        Oh yeah, did we mention it's free?
+                    </p>
+                  </div>
+                  <div class="stores">
+                    <img src="./images/badge-android.png" alt="playstore" class="tiendas">
+                    <img src="./images/badge-iphone.png" alt="appstore" class="tiendas">
+                  </div>
+                </div>
+          </div>
+    </div>
+  <footer class="footer">
+        <ul id="bar-inf">
+            <li>About Us</li>
+            <li>Support</li>
+            <li>Blog</li>
+            <li>Press</li>
+            <li>API</li>
+            <li>Jobs</li>
+            <li>Privacy</li>
+            <li>Terms</li>
+            <li>&copy; 2014 Instagram</li>
+        </ul>
+    </footer>
 </body>
 </html>
