--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,52 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-  <title>Instagram</title>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-  Instagram
+  <header>
+    <nav>
+        <img id="brand" src="images/brand.png" alt="brand-image">
+        <img id="login-image" src="images/login.png" alt="login-image">
+        <h1 id="slogan"><img
+          id="bgtitle-leftframe"
+          src="images/bgtile.png"
+          alt="background title image"
+        />Capture and Share the World's Moments</h1>
+    </nav>
+  </header>
 
-  Capture and Share the World's Moments
 
+    <img id="phonestanding" src="images/phones.png" alt="phone-image">
+
+  <span id="core-text">
   Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
   Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
   Oh yeah, did we mention it's free?
 
-  Download on the App Store
+  Download on the App Store<br/>
+
   Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
+  </span>
+  
+  <container id="lowimgphone">
+      <span><img id="iphone" src="images/badge-iphone.png" alt="phone-image"></span><span><img id="androidphone" src="images/badge-android.png" alt="android-image"></span>
+    </container>
+  <footer id="footer">
+    <span id= "foot-item1">About Us</span>
+    <span id= "foot-item2">Support</span>
+    <span id= "foot-item3">Blog</span>
+    <span id= "foot-item4">Press</span>
+    <span id= "foot-item5">API</span>
+    <span id= "foot-item6">Jobs</span>
+    <span id= "foot-item7">Privacy Terms</span>
+  </footer>
   &copy; 2014 Instagram
 </body>
 </html>
