--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,82 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+  <link rel="stylesheet" href="css/main.css">
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
+  <div class="main">
+    <div class="background">
+      <div class="main-container">
+          <!-- background image -->
+          <div class="main-card-1">
+            <img src="images/phones.png" alt="">
+          </div>
+          <!-- main content -->
+          <div class="main-card-2">
+            <nav class="brand-nav">
+              <div class="brand">
+                <img src="images/brand.png" alt="instagram brand logo">
+              </div>
+              <div class="home">
+                <div class="img-home">
+                  <img src="images/home.png" alt="home icon">
+                </div>
+                <div class="log-in">
+                  <p>Log in</p>
+                </div>
+              </div>
+            </nav>
+            <div class="secondary-container">
+              <section class="description">
+                <h2>Capture and Share the World's Moments</h2>
+                <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+                <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+                <p> Oh yeah, did we mention it's free?</p>
+      
+              </section>
+              <section class="stores">
+                <div class="apple-store">
+                  <img src="images/badge-iphone.png" alt="iphone badge">
+                </div>
+                <div class="play-store">
+                  <img src="images/badge-android.png" alt="android badge">
+                </div>
+              </section>
+            </div>
+          </div>
+        </div>
+    </div>
+  </div>
+  <div class="contact">
+    <ul class="info">
+      <li><a href="#">About Us</a> </li>
+      <li><a href="#">Support</a></li>
+      <li><a href="#">Blog</a></li>
+      <li><a href="#">Press</a></li>
+      <li><a href="#">API</a> </li>
+      <li> <a href="">Jobs</a> </li>
+      <li> <a href="">Privacy</a> </li>
+      <li> <a href="">Terms</a> </li>
+      <li> <span class="copy-right">&copy; 2014 Instagram</span> </li>
+    </ul>
+  </div>
 
-  Capture and Share the World's Moments
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  
+  
+  
+  
+  
+  
+  
+  
 
-  &copy; 2014 Instagram
+  
 </body>
 </html>
