--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,56 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <meta charset="UTF-8">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
+  <meta http-equiv="X-UA-Compatible" content="ie=edge">
+  <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css" />
 </head>
 <body>
-  Instagram
+    <header>
+        <nav>
+          <h1 id="instragram-brand">
+            <img
+              id="instragram-logo"
+              src="images/brand.png"
+              alt="instragram logo"
+            />
+          </h1>
+          <button id="log-in">
+              <img
+              id="home-logo"
+              src="images/home.png"
+              alt="home logo"
+              />
+            Log in
+          </button>
+        </nav>
+      </header>
+      <img id="phone" src="images/phones.png" alt="phones"/>
+      <img id="frame" src="images/frame.png" alt="frame">
+      <aside id="aside-text">
+        <h3>Capture and Share <br> the World's Moments</h3>
+        Instagram is a fast, beautiful and fun way to share your life with friends
+        and family.
+        <br><br>
+        Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        <br><br>
+        Oh yeah, did we mention it's free?
+      </aside>
+      <img id="google" src="images/badge-android.png" alt="phones"/>
+      <img id="appStore" src="images/badge-iphone.png" alt="frame">
 
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+      <footer id="footer-text">
+        <a href="url">About Us</a>
+        <a href="url">Support</a>
+        <a href="url">Blog</a>
+        <a href="url">Press</a>
+        <a href="url">API</a>
+        <a href="url">Jobs</a>
+        <a href="url">Privacy</a>
+        <a href="url">Terms</a>
+        &copy; 2014 Instagram
+      </footer>
+  </body>
 </html>
