--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,67 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="../starter-code/css/main.css">
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+  <div class = "instagramlogo">
+    
+    <img
+     id="logo"
+     src="../starter-code/images/brand.png" alt="Instagram" />
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+     <button id= boton type="submit"><img src="../starter-code/images/home.png" alt="login" /><font color="white">Log in</button>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+    </div>
 
-  Oh yeah, did we mention it's free?
+  <div class="phones">
+    <div style="position: absolute; left: 100px; top: 100px; z-index: 1;"><img src="../starter-code/images/phones.png"><alt="phone">
+    </div>
 
-  Download on the App Store
-  Get it on Google Play
 
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
+  <div class="frame"
+   <div style="position: absolute; left: 500px; top: 200px; z-index: 2;"><img src="../starter-code/images/frame.png"><alt="frame">
+   </div>
 
+
+  <div class="text"
+    <div style="position: absolute; left: 550px; top: 220px; color:#06365f; width: 50%; z-index: 3;"><h2>
+      Capture and share <br/> the Worl's Moments
+    </h2></div>
+
+  <div class"concept"
+  <div style="position: absolute; left: 550px; top: 300px; color: black; z-index: 4;"><p>
+      Instagram is a <bold> fast, beautiful</bold> and <bold>fun</bold> way to share yor life <br/>
+      with friends and family. <br/><br/>
+      
+      Take a picture or video, choose a filter to transform its look <br/>
+      and feel, then post to Instagram &mdash; it's that easy. You can <br/>
+      even share to Facebook, Twitter, Tumblr and more. It's a <br/>
+      new way to see the world. </br> <br/> Oh yeah, did we mention it's free?
+  </p></div>
+
+  <div class="Apple"
+   <div style="position: absolute; left: 550px; top: 550px; z-index: 5;"><img src="../starter-code/images/badge-iphone.png"><alt="apple">
+   </div>
+
+   <div class="Android"
+   <div style="position: absolute; left: 750px; top: 550px; z-index: 5;"><img src="../starter-code/images/badge-android.png"><alt="android">
+   </div>
+
+<div>
+<footer>
+ About Us &nbsp
+  Support &nbsp
+  Blog &nbsp
+  Press &nbsp
+  API &nbsp
+  Jobs &nbsp
+  Privacy &nbsp
+  Terms &nbsp
   &copy; 2014 Instagram
+</footer>
+
+  </div>
 </body>
 </html>
