--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,50 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="css/main.css">
 </head>
 <body>
-  Instagram
+  <main>
+      <section id="bg"></section>
+      <section id="ya">
+    <section class="insta">
+        
+    <section id="insta-left">
+        <img id="i-phone" src="images/phones.png" alt="Instagram">
+    </section>
+    <section id="insta-right">
+        <section id="insta-right-img">
+          <img id="insta-logo" src="images/brand.png" alt="Instagram">
+          <button><img  id="home-button" src="images/home.png" alt="home"><a>Login</a></button>
+      </section>
+        <section id="new">
+        <h1>Capture and Share the World's Moments</h1>
 
-  Capture and Share the World's Moments
+        <p>Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+        <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+        <p>Oh yeah, did we mention it's free?</p>
+      
+      <img  src="images/badge-iphone.png" alt="app store">
+      <img src="images/badge-android.png" alt="google play">
+      </section>
+    </section>
+  </section>
+    <footer>
+        <ul>
+          <li>About Us</li>
+          <li>Support</li>
+          <li>Blog</li>
+          <li>Press</li>
+          <li>API</li>
+          <li>Jobs</li>
+          <li>Privacy</li>
+          <li>Terms</li>
+          <li>&copy; 2014 Instagram</li>
+      </ul>
+    </footer>
+  </section>
+</main>
 </body>
 </html>
