--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,25 +1,48 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <title>Instagram</title>
-  </head>
-  <body>
-    <h1>Instagram</h1>
-    <h2>Capture and Share the World's Moments</h2>
-    <p>
-      Instagram is a fast, beautiful and fun way to share your life with friends
-      and family.
-    </p>
-    <p>
-      Take a picture or video, choose a filter to transform its look and feel,
-      then post to Instagram &mdash; it's that easy. You can even share to
-      Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-    </p>
-    <p>
-      Oh yeah, did we mention it's free?</p>
-      <button> Download on the App Store</button>
-      <button>Get it on Google Play</button>
-      <footer>About Us Support Blog Press API Jobs Privacy Terms &copy; 2014 Instagram</footer>
-    </p>
-  </body>
+    <head>
+        <title>Instagram</title>
+        <link rel="stylesheet" href="css/main.css" />
+    </head>
+    <body>
+        <div class="hero">
+            <img class="hero-img" src="./images/phones.png" alt="phones" />
+            <div class="hero-content">
+                <img class="logo" src="images/brand.png" alt="Instagram Logo" />
+                <button class="login">
+                    <img src="./images/home.png" alt="" /> Log In
+                </button>
+            </div>
+        </div>
+        <section class="card">
+            <h2>Capture and Share the World's Moments</h2>
+            <p>
+                Instagram is a fast, beautiful and fun way to share your life
+                with friends and family.
+            </p>
+            <p>
+                Take a picture or video, choose a filter to transform its look
+                and feel, then post to Instagram &mdash; it's that easy. You can
+                even share to Facebook, Twitter, Tumblr and more. It's a new way
+                to see the world.
+            </p>
+            <p>
+                Oh yeah, did we mention it's free?
+            </p>
+            <div class="card-badges">
+                <img src="./images/badge-iphone.png" alt="badge-iphone" />
+                <img src="./images/badge-android.png" alt="badge-android" />
+            </div>
+        </section>
+        <footer>
+            <a href="#" target="_blank">About Us</a>
+            <a href="#" target="_blank">Support</a>
+            <a href="#" target="_blank">Blog</a>
+            <a href="#" target="_blank">Press</a>
+            <a href="#" target="_blank">API</a>
+            <a href="#" target="_blank">Jobs</a>
+            <a href="#" target="_blank">Privacy Terms</a>
+            &copy; 2014 Instagram
+        </footer>
+    </body>
 </html>
