Fixed shifting footer issue.

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -15,34 +15,40 @@
             </div>
         </div>
         <section class="card">
-            <h2>Capture and Share the World's Moments</h2>
-            <p>
-                Instagram is a fast, beautiful and fun way to share your life
-                with friends and family.
-            </p>
-            <p>
-                Take a picture or video, choose a filter to transform its look
-                and feel, then post to Instagram &mdash; it's that easy. You can
-                even share to Facebook, Twitter, Tumblr and more. It's a new way
-                to see the world.
-            </p>
-            <p>
-                Oh yeah, did we mention it's free?
-            </p>
+            <article class="card-content">
+                <h2 class="card-title">
+                    Capture and Share the World's Moments
+                </h2>
+                <p>
+                    Instagram is a fast, beautiful and fun way to share your
+                    life with friends and family.
+                </p>
+                <p>
+                    Take a picture or video, choose a filter to transform its
+                    look and feel, then post to Instagram &mdash; it's that
+                    easy. You can even share to Facebook, Twitter, Tumblr and
+                    more. It's a new way to see the world.
+                </p>
+                <p>
+                    Oh yeah, did we mention it's free?
+                </p>
+            </article>
             <div class="card-badges">
                 <img src="./images/badge-iphone.png" alt="badge-iphone" />
                 <img src="./images/badge-android.png" alt="badge-android" />
             </div>
         </section>
         <footer>
-            <a href="#" target="_blank">About Us</a>
-            <a href="#" target="_blank">Support</a>
-            <a href="#" target="_blank">Blog</a>
-            <a href="#" target="_blank">Press</a>
-            <a href="#" target="_blank">API</a>
-            <a href="#" target="_blank">Jobs</a>
-            <a href="#" target="_blank">Privacy Terms</a>
-            &copy; 2014 Instagram
+            <div class="footer-content">
+                <a href="#" target="_blank">About Us</a>
+                <a href="#" target="_blank">Support</a>
+                <a href="#" target="_blank">Blog</a>
+                <a href="#" target="_blank">Press</a>
+                <a href="#" target="_blank">API</a>
+                <a href="#" target="_blank">Jobs</a>
+                <a href="#" target="_blank">Privacy Terms</a>
+                &copy; 2014 Instagram
+            </div>
         </footer>
     </body>
 </html>
