update html and css responsible

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -7,10 +7,8 @@
 <body>
 
   <!-- header -->
-  <header>
-    <div class="container"></div>
-  </header>
-  
+  <header></header>
+
   <!-- service-info -->
   <section id="service-info">
     <div class="container">
@@ -22,13 +20,16 @@
 
       <!-- service-content -->
       <div class="service-content">
-        <div class="logo-btn">
+        <div class="logo-and-btn">
           <!-- logo -->
             <a target="_blanc" href="http://instagram.com" class="service-logo"><img src="./images/brand.png"
                 alt="Instagram"></a>
   
           <!-- login -->
-            <a href="#" class="btn-text login-btn"><img src="./images/home.png" alt="login">Log In</a>
+          <button class="login-btn">
+            <img src="./images/home.png" alt="login">
+            <a href="#" class="btn-text">Log In</a>
+          </button>
         </div>
 
         <!-- section-content -->
@@ -41,6 +42,7 @@
             <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
             <p>Oh yeah, did we mention it's free?</p>
           </div>
+          
           <!-- download-btn -->
           <div class="downloads">
             <a href="#"><img src="./images/badge-iphone.png" alt=""></a>
