--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,83 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+    <link rel = "stylesheet"
+    type = "text/css"
+    href = "./css/main.css" />
   <title>Instagram</title>
 </head>
 <body>
-  Instagram
 
-  Capture and Share the World's Moments
+<section>
+  <div id="body-content">
+    <div id="left-content">
+      <img src="images/phones.png">
+    </div>
+    <div id="right-content">
+      <div id="ig-logo-and-button">
+        <div id="ig-logo">
+          <img src="images/brand.png">
+        </div>
+        <div>
+          <button type="button" id="ig-button"><img src="/starter-code/images/home.png"> <p>Log In</p></button>
+        </div>
+      </div>
+      <div id="right-paragraph">
+        <div id="capture">
+          <h2>
+            Capture and Share the World's Moments
+          </h2>
+        </div>
+        <div>
+          Instagram is a <strong>fast</strong>, <strong>beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        </div>
+        <div>
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </div>
+        <div>
+          Oh yeah, did we mention it's free?
+        </div>
+      </div>
+      <div id="app-buttons">
+        <img src="images/badge-iphone.png" type="button">
+        <img src="images/badge-android.png" type="button">
+      </div>
+    </div>
+      
+  </div>
+</section>
+  
+<section id="bottom-bar">
+  <div id="bottom-bar-content">
+    <div>
+        About Us
+      </div>
+      <div>
+          Support
+      </div>
+      <div>
+          Blog 
+      </div>
+      <div>
+        Press
+      </div>
+      <div>
+          API
+      </div>
+      <div>
+          Jobs
+      </div>
+      <div>
+        Privacy
+      </div>
+      <div>
+        Terms
+      </div>
+      <div>
+        &copy; 2014 Instagram
+      </div>
+  </div>
+</section>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
 </body>
 </html>
