--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -1,31 +1,31 @@
 <!DOCTYPE html>
 <html lang="en">
-<head>
-  <title>Instagram</title>
-</head>
-<body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
-</body>
+  <head>
+    <title>Instagram</title>
+    <link rel="stylesheet" href="css/main.css" />
+  </head>
+    <div class="flex-container">
+      <div class="flex-item">
+          <img src="images/phones.png" /></div>
+      <div class="flex-item2">
+        <div class="flex-container2">
+          <div class="flex-top">
+              <img src="images/brand.png" />
+          </div>
+          <div class="flex-bottom"><strong><h2 style="color: #06365f">Capture and Share<br> the World's Moments</h2></strong>
+              Instagram is a fast, beautiful and fun way to share your life with friends and family.<br>
+              Take a picture or video, choose a filter to transform its look and feel,
+               then post to Instagram &mdash;
+               it's that easy. You can even share to Facebook, Twitter, Tumblr and more.
+               It's a new way to see the world.<br>
+              Oh yeah, did we mention it's free?<br><br><br>
+              
+              <img src="images/badge-iphone.png" />
+              <img src="images/badge-android.png" /> 
+            </div>
+        </div>
+      </div>
+    </div>
+    <br><br><br>
+  </body>
 </html>
