--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,52 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel='stylesheet' href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class='whole'>
+  <div class='struct'>
+  <img src='./images/phones.png' alt='phones'>
+  <div class='rightsq'>
+  <div class='header'>
+  <img id ='inst' src='./images/brand.png' alt='InstaLogo'>
+  <div id='login'>
+  <img src='./images/home.png' alt ='Home'>
+  <p>Log in</p>
 
-  Capture and Share the World's Moments
+  </div>
+  </div>
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
+<article>
+  <h1>Capture and Share the World's Moments</h1>
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+  <p>Instagram is a <b>fast</b>, <b>beautiful </b>and <b>fun</b> way to share your life with friends and family.</p>
 
-  Oh yeah, did we mention it's free?
+  <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
 
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <p>Oh yeah, did we mention it's free?</p>
+</article>
+<div class='icons'>
+<div class='iconsins'>
+  <img src='./images/badge-iphone.png' alt='iphone'>
+  <img src='./images/badge-android.png' alt='android'>
+</div>
+</div>
+</div>
+</div>
+</div>
+<footer>
+  <ul class='links'>
+  <li>About Us</li>
+  <li>Support</li>
+  <li>Blog</li>
+  <li>Press</li>
+  <li>API</li>
+  <li>Jobs</li>
+  <li>Privacy</li>
+  <li>Terms</li>
+  <li class='cr'>&copy 2014 Instagram</li>
+</ul>
+</footer>
 </body>
 </html>
