--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,30 +2,47 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href='./css/main.css'>
 </head>
 <body>
-  Instagram
-
-  Capture and Share the World's Moments
-
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
-
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
-
-  Oh yeah, did we mention it's free?
-
-  Download on the App Store
-  Get it on Google Play
-
-  About Us
-  Support
-  Blog
-  Press
-  API
-  Jobs
-  Privacy
-  Terms
-
-  &copy; 2014 Instagram
+  <header>
+    <div></div>
+    <div class="right-side-header">
+        <img src="./images/brand.png">
+        <div class="login">
+          <button><img src="./images//home.png"><span><strong>Log in</strong></span></button>
+        </div>
+      </div>
+  </header>
+  <section class="web-description">
+<div class="phone-image">
+<img src="./images/phones.png" alt="phones image">
+</div>
+<div class="page-details">
+  <div class="card">
+      <h2>Capture and Share the World's Moments</h2>
+      <p>Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.</p>
+      <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+          <p>Oh yeah, did we mention it's free?</p>
+  </div>
+  <div class="promotional-images"> 
+      <img src="./images/badge-iphone.png">
+<img src="./images/badge-android.png">
+  </div>
+</div>
+  </section>
+<footer>
+  <ul>
+    <li>ABOUT US</li>
+    <li>SUPPORT</li>
+    <li>BLOG</li>
+    <li>PRESS</li>
+    <li>API</li>
+    <li>JOBS</li>
+    <li>PRIVACY</li>
+    <li>TERMS</li>
+    <li>&copy; 2014 INSTAGRAM</li>
+  </ul>
+</footer> 
 </body>
 </html>
