--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -2,20 +2,51 @@
 <html lang="en">
 <head>
   <title>Instagram</title>
+  <link rel="stylesheet" href="./css/main.css">
 </head>
 <body>
-  Instagram
+  <div class="top"></div>
+  <div class="main-content">
+    <div class="left">
+      <img src="./images/phones.png" alt="">
+    </div>
+    <div class="right">
+      <div class="instagram">
+        <span class="brand">
+            <img src="./images/brand.png" alt="">
+        </span>
+        <button>
+          <img src="./images/home.png" alt="">
+          Log in
+        </button>
+      </div>
+      <div class="words">
+        <h1>Capture and Share<br>the World's Moments</h1>
+        <p>  
+          Instagram is a <strong>fast, beautiful</strong> and <strong>fun</strong> way to share your life with friends and family.
+        </p>
+        <p>  
+          Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
+        </p>
+        <p>
+            Oh yeah, did we mention it's free?
+        </p>
+        <a href="https://apps.apple.com/bn/app/instagram/id389801252">
+          <img src="./images/badge-iphone.png" alt="">
+        </a>
+        <a href="https://play.google.com/store/apps/details?id=com.instagram.android&hl=en_US">
+            <img src="./images/badge-android.png" alt="">
+        </a>
+      </div>
+    </div>
+  </div>
+  
 
-  Capture and Share the World's Moments
+  
 
-  Instagram is a fast, beautiful and fun way to share your life with friends and family.
 
-  Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.
 
-  Oh yeah, did we mention it's free?
 
-  Download on the App Store
-  Get it on Google Play
 
   About Us
   Support
