--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -34,19 +34,21 @@
 
         <!-- section-content -->
         <div class="section-content">
-          <div class="section-title">
-            <h1>Capture and Share<br>the World's Moments</h1>
-          </div>
-          <div class="section-text">
-            <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
-            <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
-            <p>Oh yeah, did we mention it's free?</p>
-          </div>
-          
-          <!-- download-btn -->
-          <div class="downloads">
-            <a href="#"><img src="./images/badge-iphone.png" alt=""></a>
-            <a href="#"><img src="./images/badge-android.png" alt=""></a>
+          <div>
+            <div class="section-title">
+              <h1>Capture and Share<br>the World's Moments</h1>
+            </div>
+            <div class="section-text">
+              <p>Instagram is a fast, beautiful and fun way to share your life with friends and family.</p>
+              <p>Take a picture or video, choose a filter to transform its look and feel, then post to Instagram &mdash; it's that easy. You can even share to Facebook, Twitter, Tumblr and more. It's a new way to see the world.</p>
+              <p>Oh yeah, did we mention it's free?</p>
+            </div>
+            
+            <!-- download-btn -->
+            <div class="downloads">
+              <a href="#"><img src="./images/badge-iphone.png" alt=""></a>
+              <a href="#"><img src="./images/badge-android.png" alt=""></a>
+            </div>
           </div>
         </div>
       </div>
