adjust footer padding in mobile view

--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -32,9 +32,9 @@
           </button>
         </div>
 
-        <!-- section-content -->
-        <div class="section-content">
-          <div>
+        <!-- card -->
+        <div class="card">
+          <div class="card-content">
             <div class="section-title">
               <h1>Capture and Share<br>the World's Moments</h1>
             </div>
