--- a/starter-code/index.html
+++ b/starter-code/index.html
@@ -40,15 +40,7 @@
       </div>
     </div>
   </div>
-  
-
-  
-
-
-
-
-
-  About Us
+  <!-- About Us
   Support
   Blog
   Press
@@ -56,7 +48,6 @@
   Jobs
   Privacy
   Terms
-
-  &copy; 2014 Instagram
+ 2014 Instagram -->
 </body>
 </html>
